# GenAI-Based-System-for-Intelligent-Study-and-Revision-Support

./: .env.example  .gitignore  pyproject.toml  requirements.txt  requirements2.txt  setup.md
app/: __init__.py  config.py  database.py  main.py
app/agents/: __init__.py
app/models/: __init__.py  schemas.py
app/prompts/: __init__.py
app/routers/: upload.py
app/services/: __init__.py  chunking.py  document_service.py  embedding.py  file_handler.py  generation.py  preprocessing.py
app/vector_store/: __init__.py  faiss_store.py
